--- a/src/components/player/Player.module.css
+++ b/src/components/player/Player.module.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
 }
-
 .mainBox {
     width: 100%;
     aspect-ratio: 16/9;
@@ -20,7 +19,9 @@
     justify-content: center;
     align-items: center;
     background-color: black;
-    position: relative;
+    position: fixed;
+    z-index: 100;
+    top: 0;
 }
 .controls {
     position: absolute;
