--- a/src/components/player/Player.module.css
+++ b/src/components/player/Player.module.css
@@ -3,8 +3,7 @@
 }
 .mainBox {
     width: 100%;
-    aspect-ratio: 16/9;
-    max-height: 90vh;
+    max-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,16 +11,17 @@
     position: relative;
 }
 .mainBox2 {
-    width: 100%;
+    width: 100vw;
     /* aspect-ratio: 16/9; */
-    height: 100dvh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: black;
-    position: fixed;
+    /* position: fixed; */
     z-index: 100;
     top: 0;
+    left: 0;
 }
 .controls {
     position: absolute;
