--- a/src/components/player/Player.module.css
+++ b/src/components/player/Player.module.css
@@ -18,10 +18,7 @@
     justify-content: center;
     align-items: center;
     background-color: black;
-    /* position: fixed; */
-    z-index: 100;
-    top: 0;
-    left: 0;
+    position: relative;
 }
 .controls {
     position: absolute;
