--- a/src/components/player/Player.module.css
+++ b/src/components/player/Player.module.css
@@ -145,7 +145,8 @@
 .second{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
+    margin-right: 8px;
 }
 .second > div{
     display: flex;
